#ifndef RUNNING_STATUS_H
#define RUNNING_STATUS_H

enum class RunningStatus
{
    IDLE,
    RUNNING,
    COMPLETED
};

#endif // RUNNING_STATUS_H